fix overflow container

--- a/css/stay-in-touch.css
+++ b/css/stay-in-touch.css
@@ -26,7 +26,7 @@
     padding: 20px;
     width: 50%;
     text-align: right;
-    color: var(--font-color-2);
+    color: white;
 }
 
 .stay-in-touch__title {
